<resources>
    <string name="freeze_bottom_sheet_behavior" translatable="false">tlt.th.co.toyotaleasing.view.bottomsheet.FreezeBottomSheet</string>
    <string name="language_thai">TH</string>
    <string name="language_english">EN</string>
    <string name="language_thai_display">ภาษาไทย</string>
    <string name="language_english_display">English</string>
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="google_play_store_link"></string>
    <string name="google_play_store_link_public"></string>
    <string name="loading">Loading</string>
    <string name="currency">%1$s Baht</string>
    <string name="error_cant_back">Can\'t back</string>
    <string name="error_not_empty">Phone number is incorrect</string>
    <string name="error_email_pattern">Email address is incorrect</string>
    <string name="error_password_not_match">Sorry, PIN code is incorrect.</string>
    <string name="error_password_require_6_digits">Sorry, Set PIN with 6 digits.</string>
    <string name="error_idcard_pattern">Simply Card ID is incorrect.</string>
    <string name="error_password_pattern">This PIN Code Can Be Easily Guessed , Please Change</string>
    <string name="open_email_app">Choose email app</string>
    <string name="home_title">Loan Calculation</string>
    <string name="otp_dialog_description">The system will send OTP to your phone number</string>
    <string name="otp_dialog_btn_confirm">Confirm</string>
    <string name="otp_dialog_btn_cancel">Cancel</string>
    <string name="otp_btn_confirm">Confirm</string>
    <string name="default_notification_channel_id">tlt_develop</string>
    <string name="pincode_title_header">Insert the PIN Code</string>
    <string name="pincode_forgot_pin">Forgot password</string>
    <string name="register_title">Register</string>
    <string name="quotation_title">Request Quotation</string>
    <string name="setuppincode_title">Set PIN Code</string>
    <string name="register_success_title">Set PIN Code</string>
    <string name="fingerprint_setting_title">ตั้งค่าลายนิ้วมือ</string>
    <string name="filter_car_title">Select Car</string>
    <string name="verifyemail_title">Verification</string>
    <string name="verifyemail_title_header">Confirm Email</string>
    <string name="verifyemail_description">To process the registration, please press the "Confirm my email" button  to confirm your email.</string>
    <string name="verifyemail_confirm_text">Confirm my email</string>
    <string name="verifyemail_txt_not_yet_receive_email">Have not received email?</string>
    <string name="verifyemail_btn_resend_email">Resend</string>
    <string name="verifyemail_success_title_header">Welcome</string>
    <string name="verifyemail_success_description">You have already confirmed your email. Please press the below button for continue the registration process.</string>
    <string name="verifyemail_success_confirm_text">Go back to setting page</string>
    <string name="verifyemail_fail_title_header">Cannot confirm email</string>
    <string name="verifyemail_fail_description">Link for email confirmation has been expired. please press the button to confirm your email again</string>
    <string name="policy_title_header">Terms and conditions</string>
    <string name="policy_confirm_text">Next</string>
    <string name="policy_accept_term_and_condition">Agree on terms and conditions</string>
    <string name="policy_unaccept_term_and_condition">Not Agree on terms and conditions</string>
    <string name="selectphone_header_title">Please select a phone number to receive an OTP \nto confirm your identity.</string>
    <string name="selectphone_contact_staff">Please contact Call Center agent</string>
    <string name="selectphone_phone_not_found">In case your mobile number is not found, please press "Contact Call Center Agent" for modify your mobile number.</string>
    <string name="callcenter_dialog_description">Contact Call Center\n%1$s</string>
    <string name="callcenter_dialog_btn_cancel">Cancel</string>
    <string name="callcenter_dialog_btn_call">Call</string>
    <string name="otp_header_title">Please enter your OTP number \nto confirm your identity.</string>
    <string name="otp_did_not_get_otp">If you don\'t receive the OTP number,</string>
    <string name="otp_resend_otp">\"RESEND\"</string>
    <string name="otp_entered_incorrect">The OTP entered is incorrect.</string>
    <string name="otp_timeout_otp">OTP code has been expired. Please press "Resend" button.</string>
    <string name="register_success_header_title">Registration is completed</string>
    <string name="register_success_description">For the safety to access your information. Please set the PIN for use in next time.</string>
    <string name="register_success_confirm_text">Set the PIN</string>
    <string name="setuppincode_header_title">Set PIN with 6 digits</string>
    <string name="setuppincode_confirm_text">Confirm</string>
    <string name="fingerprint_setting_description">Would you like to access the application with the Touch ID?</string>
    <string name="registerform_title_header">Please complete hirer registration with email and Simply Card customer ID</string>
    <string name="registerform_email_hint">Email.</string>
    <string name="registerform_household_id_hint">Househole ID</string>
    <string name="registerform_id_card_hint">Insert ID Card number 13-digit</string>
    <string name="registerform_birthdate_hint">Birthdate</string>
    <string name="registerform_personal_id_type_title">Select type of data</string>
    <string name="registerform_btn_next">Next</string>
    <string name="registerform_radio_id_card">ID card number</string>
    <string name="registerform_radio_passport">Passport number</string>
    <string name="registerform_passport_hint">Insert Passport number</string>
    <string name="registerform_contract_hint">Contract ID</string>
    <string name="registerform_txt_description">ID no. or Passport no. will be used for verify vehicle is information only</string>
    <string name="registerform_txt_id_card_description">Please insert your ID card number or Passport number which have been given in the Car Financial contract.</string>
    <string name="registerform_dialog_fragment">You can check the customer ID 11 or 12 digits on Simply Card or your receipt</string>
    <string name="registerform_fill_email_type_title">Please fill out hirer\'s information for registration</string>
    <string name="registerform_fill_contract_number_title">Please Insert your contract ID (10 Digits)</string>
    <string name="fingerprint_setting_confirm_text">Yes, access the app with my finger print.</string>
    <string name="fingerprint_setting_skip_text">Skip, Go to the main page.</string>
    <string name="fingerprint_dialog_description">Access with the Touch ID\nor press "Cancel" to go back to use the password pin </string>
    <string name="fingerprint_wait_scan">Please scan your finger for authentication</string>
    <string name="fingerprint_scan_fail">Please try again.</string>
    <string name="fingerprint_scan_success">Connected the ID touch</string>
    <string name="fingerprint_dialog_btn_confirm">Go to the main page.</string>
    <string name="fingerprint_auth_dialog_btn_cancel">Cancel</string>
    <string name="fingerprint_dialog_please_try_again">Please try again.</string>
    <string name="setuppincode_password_hint">PIN Code</string>
    <string name="setuppincode_password_confirm_hint">Confirm PIN Code</string>
    <string name="home_content_title">Register for TLT customer</string>
    <string name="home_btn_register_by_email">Register with Email</string>
    <string name="home_alternative_register">Or register via</string>
    <string name="home_email_hint">Please enter your Email</string>
    <string name="sidebar_menu_installment">Installment</string>
    <string name="sidebar_menu_tax">Tax</string>
    <string name="sidebar_menu_insurance">Motor Insurance</string>
    <string name="sidebar_menu_other_insurance">Other Insurance</string>
    <string name="sidebar_menu_cal_installment">Loan Calculation</string>
    <string name="sidebar_menu_mandatorium">Dept Mandatorium</string>
    <string name="sidebar_menu_ecommerce">e-Commerce</string>
    <string name="sidebar_menu_news">News &amp; Promotion</string>
    <string name="sidebar_menu_location">Contact Us</string>
    <string name="sidebar_menu_chat">Chat Bot</string>
    <string name="sidebar_menu_office_location">Branches and Dealer\'s Location</string>
    <string name="sidebar_menu_document_download">Download Documents</string>
    <string name="sidebar_menu_question">FAQ</string>
    <string name="sidebar_menu_policy">Terms and Conditions</string>
    <string name="sidebar_menu_setting">Setting</string>
    <string name="sidebar_menu_debug">Test Mode</string>
    <string name="sidebar_menu_tracking_ownership">Tracking Status</string>
    <string name="sidebar_menu_logout">Sign Out</string>
    <string name="sidebar_menu_car_loan">Car Loan</string>
    <string name="sidebar_title_menu_car_loan">Car Loan</string>
    <string name="sidebar_menu_car_loan_login">Authentication</string>
    <string name="sidebar_menu_privacy_policy">Privacy Policy</string>
    <string name="sidebar_menu_deptmandatorium">Debt Mandatorium</string>
    <string name="installment_status_title">My car</string>
    <string name="payment_history_title">Payment History</string>
    <string name="notification_title">Notification</string>
    <string name="my_car_txt_contract">My contract</string>
    <string name="my_car_txt_detail_installment">Installment detail</string>
    <string name="my_car_txt_status_installment">Installment Status</string>
    <string name="my_car_txt_full_payment">Paid term</string>
    <string name="my_car_txt_balance">Outstanding term</string>
    <string name="my_car_txt_period">%1$s term</string>
    <string name="my_car_txt_total_payment">Payment Amount <![CDATA[<font color="%2$s">%1$s</font>]]> Baht</string>
    <string name="my_car_txt_period_payment">Installment as of %1$s</string>
    <string name="my_car_txt_contract_number">Contract number : %1$s</string>
    <string name="appintro_tutorial_1_title">To make your life easier with the function that covers all services for the convenience of our customer.</string>
    <string name="appintro_tutorial_2_title">You can check your personal information such as payment term, current outstanding balanced, car registration.  Including pay annual car tax via the application.</string>
    <string name="contractcar_title">My contract</string>
    <string name="edit_mailing_address_title">Edit information</string>
    <string name="edit_address_tab_title">Change address</string>
    <string name="edit_email_tab_title">Change the email</string>
    <string name="contractcar_contractcar_tab_title">Contract</string>
    <string name="contractcar_account_closing_tab_title">Payoff</string>
    <string name="contractcar_refinance_tab_title">Refinance</string>
    <string name="location_filter_title">Search</string>
    <string name="location_filter_dealer_hint">Dealer</string>
    <string name="location_filter_dealer_title">Search dealer location</string>
    <string name="location_filter_province_hint">Select province</string>
    <string name="location_filter_district_hint">Select district</string>
    <string name="location_filter_office">Office</string>
    <string name="location_filter_showroom">Showroom</string>
    <string name="location_filter_service">Service Center</string>
    <string name="location_filter_repair">Body &amp; Paint Center</string>
    <string name="location_filter_dealer_nearly">Search dealer location nearby</string>
    <string name="location_filter_search">Search</string>
    <string name="non_customer_description">Sorry, you are not allowed to access this page\nPlease register to access the data of TLT customer</string>
</resources>