<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <tlt.th.co.toyotaleasing.view.ToolbarWidget
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:enableNavigationIcon="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/verifyemail_title"
        app:toolbarSize="normal"
        tools:background="@color/bg_toolbar" />

    <tlt.th.co.toyotaleasing.view.TLTTextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/custom_bold"
        android:text="@string/verifyemail_fail_title_header"
        android:textColor="@color/text_normal"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_mail"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome"
        app:srcCompat="@drawable/ic_mail_fail" />

    <tlt.th.co.toyotaleasing.view.TLTTextView
        android:id="@+id/txt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:fontFamily="@font/custom_regular"
        android:gravity="center"
        android:text="@string/verifyemail_fail_description"
        android:textColor="@color/text_normal"
        android:textSize="@dimen/header2_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_mail" />

    <tlt.th.co.toyotaleasing.view.TLTTextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/custom_regular"
        android:gravity="center"
        android:textColor="@color/text_normal"
        android:textSize="@dimen/header2_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_description"
        tools:text="anupon@gmail.com" />

    <tlt.th.co.toyotaleasing.view.TLTButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/selector_btn_confirm_green"
        android:fontFamily="@font/custom_bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/verifyemail_confirm_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_button_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email" />

    <tlt.th.co.toyotaleasing.view.TLTTextView
        android:id="@+id/txt_not_yet_receive_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/custom_regular"
        android:gravity="end"
        android:text="@string/verifyemail_txt_not_yet_receive_email"
        android:textColor="@color/text_normal"
        android:textSize="@dimen/header2_text_size"
        app:layout_constraintEnd_toStartOf="@id/btn_resend_email"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_confirm" />

    <tlt.th.co.toyotaleasing.view.TLTTextView
        android:id="@+id/btn_resend_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/custom_bold"
        android:gravity="start"
        android:text="@string/verifyemail_btn_resend_email"
        android:textColor="@color/terracotta"
        android:textSize="@dimen/header2_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/txt_not_yet_receive_email"
        app:layout_constraintTop_toBottomOf="@id/btn_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>