<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <tlt.th.co.toyotaleasing.view.ToolbarWidget
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_menubars"
        app:title="@string/installment_status_title"
        app:toolbarSize="normal" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_location"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@id/txt_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_lock_greybg" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_description"
        style="@style/Text_Bold_Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/non_customer_description"
        android:textColor="@color/brownish_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        style="@style/Button_Success"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:paddingStart="@dimen/margin_large"
        android:paddingTop="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_large"
        android:paddingBottom="@dimen/margin_small"
        android:text="@string/register_title"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_description" />
</androidx.constraintlayout.widget.ConstraintLayout>